[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weighting"
version = "1.1.6"
authors = [{ name = "atzur" }]
description = "functions to calculate weights"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"homepage" = "https://github.com/atzuur/weighting"
